--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
  
 /*left*/
 .line{
-    border-bottom: 1px #fac1b4 solid;
+    border-bottom: 1px #450004 solid;
 }
  
 .left{
@@ -79,7 +79,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px #fac1b4 solid;
+    border: 1px #450004 solid;
     border-radius: 5px;
     padding-right: 5px;
 }
@@ -88,7 +88,7 @@ body{
     padding: 5px 7px;
     border-radius: 3px;
     font-size: 15px;
-    background-color: #fac1b4;
+    background-color: #450004;
 }
  
 .left-info-age-subtitle, .left-info-address-subtitle, .left-info-email-subtitle, .left-info-tel-subtitle{
@@ -133,7 +133,7 @@ body{
     font-size: 15px;
     color: #767676;
     padding: 5px;
-    border: 1px #fac1b4 solid;
+    border: 1px #450004 solid;
     border-radius: 5px;
     max-width: 260px;
 }
@@ -157,7 +157,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #fac1b4;
+    background-color: #450004;
     border-radius: 20px;
 }
  
@@ -246,7 +246,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    border: 2px #fac1b4 solid;
+    border: 2px #450004 solid;
     border-radius: 10px;
 }
  
