--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body{
     border-radius: 3px;
     font-size: 15px;
     background-color: #450004;
+    color: #ffffff;
 }
  
 .left-info-age-subtitle, .left-info-address-subtitle, .left-info-email-subtitle, .left-info-tel-subtitle{
