--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body{
 .left-hard-title-icon, .left-soft-title-icon, .left-LIGHT-title-icon, .left-STANDART-title-icon, .left-VIP-title-icon, .left-CON-title-icon, .left-SMM-title-icon{
     width: 12px;
     height: 12px;
-    background-color: #767676;
+    background-color: #e0e0e0;
     border-radius: 50%;
     padding: 3px;
 }
