--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ body{
     border: 2px #767676 solid;
     border-radius: 10px;
     padding: 10px;
-    background-color: #fff6f4;
+    background-color: #fff;
 }
  
 .main-services-items-img{
