--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ body{
     width: 300px;
     height: 200px;
     border-radius: 10px;
+    border: 1px #767676 solid;
 }
  
 .main-services-items-footer{
