--- a/style.css
+++ b/style.css
@@ -513,6 +513,9 @@ body{
     .main-services-items{
         padding: 2px;
     }
+    .content-rating-card-item{
+    width: 300px;
+    }
 }
  
  
